--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -34,6 +34,16 @@ main:
     weight: 130
 
 
+  - name: Resume
+    url: 'resume'
+    weight: 140
+
+
+  - name: Contact
+    url: 'contact'
+    weight: 150
+
+
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
